--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 runtime: nodejs14 # or another supported version
-instance_class: F2
+instance_class: B2
 env: standard
 manual_scaling:
   instances: 2
