--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ SERVER_TOKEN=my-super-cool-server-token
 GROUPAROO_LOG_LEVEL=info
 # GROUPAROO_LOGS_STDOUT_DISABLE_COLOR=true
 # GROUPAROO_LOGS_STDOUT_DISABLE_TIMESTAMP=true
-# GROUPAROO_LOGS_PATH="/path/to/logs"
+GROUPAROO_LOGS_PATH="/var/log/grouparoo"
 
 ###########
 ## REDIS ##
