--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MPL-2.0",
   "private": true,
   "engines": {
-    "node": "14"
+    "node": "14.x"
   },
   "dependencies": {
     "@grouparoo/bigquery": "0.2.12",
