lock node version (#1)
* lock node version

* relax node version

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.0.1",
   "license": "MPL-2.0",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "@grouparoo/bigquery": "0.2.12",
     "@grouparoo/core": "0.2.12",
