--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.BOT_GITHUB_PAT }}
       - run: cp .env.example .env
       - run: npm install
       - run: sudo npm install -g npm-check-updates
@@ -22,7 +24,6 @@ jobs:
         run: echo CORE_VERSION=`cat package.json | jq -r '.dependencies."@grouparoo/core"'` >> $GITHUB_ENV
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          token: ${{ secrets.BOT_GITHUB_PAT }}
           commit_message: Updating Packages
           commit_user_name: Grouparoo Bot
           commit_user_email: hello@grouparoo.com
